# stackdup-dual-encoder-retrieval

./: .gitignore  EXPERIMENTS.md  Makefile  README.md  pyproject.toml  requirements-pyserini.txt  requirements.txt
_autopilot/: project_plan.json  readme_last_message.txt  run_summary.json  scaffold_last_message.txt
configs/: smoke_baseline.yaml  smoke_data.yaml  smoke_no_hardneg.yaml  stackoverflow.yaml
results/: results.json
scripts/: bootstrap_venv.sh
src/stackdup/baselines/: bm25_eval.py  common.py  pyserini_eval.py  pyserini_index.py  tfidf_eval.py
src/stackdup/data/: synthetic.py
src/stackdup/eval/: retrieval.py
src/stackdup/mining/: mine_negatives.py
src/stackdup/modeling/: encoder.py
src/stackdup/reporting/: collect_results.py  make_report.py
src/stackdup/train/: biencoder.py  collate.py  dataset.py
src/stackdup/utils/: config.py  jsonl.py  metrics.py  repro.py
src/stackdup_dual_encoder_retrieval.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
